Web Inspector: Fix "Javascript" => "JavaScript" enum in protocol generated objects https://bugs.webkit.org/show_bug.cgi?id=191340

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-11-07
Reviewed by Devin Rousso.

Source/JavaScriptCore:

* inspector/ConsoleMessage.cpp:
(Inspector::messageSourceValue):
Use new enum name.

* inspector/scripts/codegen/generator.py:
Correct the casing of "JavaScript".

Source/WebCore:

* inspector/agents/InspectorMemoryAgent.cpp:
(WebCore::InspectorMemoryAgent::collectSample):
Use new enum name.

Source/WebInspectorUI:

* UserInterface/Models/Canvas.js:
(WI.Canvas.fromPayload):
Insert a missing break statement for the WebGPU case.

* UserInterface/Models/MemoryTimelineRecord.js:
(WI.MemoryTimelineRecord.memoryCategoriesFromProtocol):
Use new enum name.

* UserInterface/Protocol/Legacy/10.0/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/10.3/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/11.0/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/11.3/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/12.0/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/8.0/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/9.0/InspectorBackendCommands.js:
* UserInterface/Protocol/Legacy/9.3/InspectorBackendCommands.js:
Update enums with new generator.

Canonical link: https://commits.webkit.org/206173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237934 268f45cc-cd09-0410-ab3c-d52691b4dbfc